Update README.md file with Requirements to run the plugin